--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ __pycache__/
 
 test_*
 *_hack
+*_backup
 nohup*
 old_*
 tmp_*
@@ -18,6 +19,7 @@ wornout/
 develop/
 original/
 trivial/
+plot/
 .ipynb_checkpoints/
 
 .DS_Store
