--- a/scripts/example_nine_bands.ini
+++ b/scripts/example_nine_bands.ini
@@ -24,7 +24,7 @@ mag_min_cut =           16                     # brightest galaxies to be simula
 # catalogue column names to the desired info
 id_name =               index                  # unique galaxy id
 detection_mag_name =    r                      # correspond to the `detection_band` in [ImSim]
-mag_name_list =         r
+mag_name_list =         u, g, r, i, Z, Y, J, H, Ks
                                                # correspond to the the `band_list` in [ImSim]
 RaDec_names =           ra, dec
 shape_names =           none, none, none, none, none, none, none, none, none, none
@@ -51,7 +51,7 @@ mag_min_cut =           10                     # brightest stars to be simulated
 # column names to the desired info
 id_name =               index                  # unique star id
 detection_mag_name =    r                      # correspond to the `detection_band` in [ImSim]
-mag_name_list =         r
+mag_name_list =         u, g, r, i, Z, Y, J, H, Ks
                                                # correspond to the the `band_list` in [ImSim]
 RaDec_names =           ra, dec                # not required, if stars are randomly placed
 
@@ -73,25 +73,25 @@ noise_psf_basenames =   none, none, none, none, none, none
 ################################## ImSim ###################################################
 [ImSim]
 
-survey =              one_tile                 # survey being simulated
+survey =              KiDS                     # survey being simulated
                                                # current supported surveys:
                                                #    one_tile: simple one image including all the galaxies
                                                #    simple_Ndeg: N can be any int corresponding to the tile sky area
                                                #    KiDS: KiDS-like images (5 exposures, dither patterns and chip gaps)
-band_list =             r
+band_list =             u, g, r, i, Z, Y, J, H, Ks
                                                # bands being simulated
-pixel_scale_list =      0.214
+pixel_scale_list =      0.214, 0.214, 0.214, 0.214, 0.34, 0.34, 0.34, 0.34, 0.34
                                                # pixel scale for each band image
-image_type_list =      simple
+image_type_list =      sameExpo, sameExpo, diffExpo, sameExpo, simple, simple, simple, simple, simple
                                                # image type for each band
                                                # current supported types:
                                                #    simple: without any survey feature (a simple stacked image)
                                                #    sameExpo: different exposures use the same noise&PSF info
                                                #    diffExpo: different exposures use different noise&PSF info
-image_chips =           False
+image_chips =           False, False, True, False, False, False, False, False, False
                                                # save individual chips or not
                                                # required by lensfit
-image_PSF =             True
+image_PSF =             False, False, True, False, False, False, False, False, False
                                                # save individual psf
                                                # required by lensfit
 N_tiles =               1                      # number of tiles to be simulated
@@ -111,15 +111,15 @@ mag_zero =              30                     # simulated magnitude zero point
 
 # for coadding or resampling
 cmd =                   swarp                  # the executable path to the SWarp code
-config_files =          coadd_theli.swarp
+config_files =          coadd_theli.swarp, coadd_aw.swarp
                                                # SWarp configuration files
                                                # more than one files are supported
                                                #    in which case, more than one treatments are applied
-bands_group =           [r]                    # bands to be swarped
+bands_group =           [r], [u, g, r, i]      # bands to be swarped
                                                # NOTE: the group corresponding to the same config should be surrounded by `[]`
-image_label_list =      THELI                  # name to label the swaped results, one to each group
-only_resamples =        False                  # set it True if only resampling but not coadding
-clean_up_levels =       0                      # clean up level
+image_label_list =      THELI, AW              # name to label the swaped results, one to each group
+only_resamples =        False, False           # set it True if only resampling but not coadding
+clean_up_levels =       0, 0                   # clean up level
                                                #    0: none
                                                #    1: original images
                                                # NOTE: careful about cleaning before other swarp applied
@@ -161,6 +161,64 @@ save_false =            True                   # save false-detected object info
 save_missed =           True                   # save the missed object info
 dmag_max =              0.5                    # allowed maximum magnitude difference
 r_max =                 1.0                    # (arcsec) allowed maximum separation
+
+
+################################## MeasurePhotometry ########################################################
+[MeasurePhotometry]
+
+method =                GAaP                   # method for photometry measurement
+                                               # supported method:
+                                               #    GAaP
+detection_band =        r                      # band with detection catalogue
+band_list =             u, g, r, i, Z, Y, J, H, Ks
+                                               # bands being measured
+image_label_list =      AW, AW, AW, AW, original, original, original, original, original
+                                               # a list of labels for the image types, can be either:
+                                               #    original (for original simulated images)
+                                               #    any label specified in `swarp_labels`
+
+
+[GAaP]
+
+gaap_dir =                                     # directory containing GAaP bins and libs
+min_aper =              0.7                    # minimum aperture size
+max_aper =              2.0                    # maximum aperture size
+use_PSF_map =           False                  # use separate psf map for psf estimation
+                                               # only required if stars are not simulated
+star_mag_cut =          16, 20                 # magnitude range for stars used for PSF estimation
+                                               # not used if PSF map is provided
+clean_up_level =        0                      # clean up level
+                                               #    0: none
+                                               #    1: tmp directory
+                                               #    2: and *.gaap files
+
+
+################################## MeasurePhotoz ########################################################
+[MeasurePhotoz]
+
+method =                BPZ                    # method for photo-z measurement
+                                               # supported method:
+                                               #    BPZ
+
+
+[BPZ]
+
+BPZ_dir =                                      # the directory containing BPZ-related codes
+python2_cmd =                                  # the executable path to the python2
+band_list =              u, g, r, i, Z, Y, J, H, Ks
+band_CataNameBase =      MAG_GAAP_0p7
+banderr_CataNameBase =   MAGERR_GAAP_0p7
+band_FilterName_list =   Paranal_OmegaCAM.u_SDSS, Paranal_OmegaCAM.g_SDSS, Paranal_OmegaCAM.r_SDSS, Paranal_OmegaCAM.i_SDSS, LSST_LSST.z, LSST_LSST.y, 2MASS_2MASS.J, 2MASS_2MASS.H, 2MASS_2MASS.Ks
+photo_sys =              AB
+prior_band =             i
+prior_name =             NGVS
+templates_name =         CWWSB_capak
+interpolation =          10
+lkl_zmin =               0.0002
+lkl_zmax =               2.2984
+lkl_dz =                 0.01
+lkl_odds =               0.68
+lkl_min_rms =            0.0
 
 
 ################################## MeasureShape #################################################
