simplified and tested example files

--- a/scripts/example_single_band.ini
+++ b/scripts/example_single_band.ini
@@ -1,6 +1,6 @@
 # Example configuration file
 #   for MultiBand_ImSim v0.3
-# Created by ssli (2021-03-04 14:02:42)
+# Created by ssli (2021-02-16 21:06:01)
 # Note: If you do not use certain sections, just leave them whatever they are.
 #         They will not be loaded.
 
@@ -8,61 +8,58 @@
 ################################## Paths ################################################
 [Paths]
 
-config_dir =  ../config/                       # directory to all the configuration files
-out_dir =                                      # main directory for all the outputs
+config_dir =  ../config/      # directory to all the configuration files
+out_dir =   /disks/shear15/ssli/ImSim/output/ # main directory for all the outputs
 
 
 ################################## GalInfo ##############################################
 [GalInfo]
 
-cata_file =                                    # input galaxy mock catalogue
+cata_file =        /disks/shear10/ssli/ImSim/input/COSMOS_cata/cosmos_shape_z_ugriZYJHKs_selected.feather # input galaxy mock catalogue
                                                # supported file types: feather, csv, fits
 position_type =         true                   # position to be used
                                                #    true (use positions from the input catalogue)
                                                #    grid (put in a grid)
 mag_min_cut =           16                     # brightest galaxies to be simulated
 # catalogue column names to the desired info
-id_name =               index                  # unique galaxy id
-detection_mag_name =    r                      # correspond to the `detection_band` in [ImSim]
-mag_name_list =         r
+id_name =               OBJNO                  # unique galaxy id
+detection_mag_name =    r_mag_auto                      # correspond to the `detection_band` in [ImSim]
+mag_name_list =         r_mag_auto
                                                # correspond to the the `band_list` in [ImSim]
-RaDec_names =           ra, dec
-shape_names =           none, none, none, none, none, none, none, none, none, none
+RaDec_names =           RA, DEC
+shape_names =           shape/Re, shape/sersic_n, BA_GALFIT_HI, none, none, none, none, none, none, none
                                                # order:
                                                #    Re (in arcsec!), sersic_n, axis_ratio, PA,
                                                #    bulge_fraction, bulge_Re (in arcsec!), bulge_axis_ratio, bulge_sersic_n,
                                                #    disk_Re (in arcsec!), disk_axis_ratio
                                                # not all required, for those missed, simply feed none
 
-
 ################################## StarInfo ##############################################
 [StarInfo]
 
-cata_file =                                    # input star mock catalogue
-                                               # supported file types: feather, csv, fits
-                                               # leave it as empty if stars are not needed
-cata_area =             1                      # square degrees
-                                               # sky area spanned by the input catalogue
-                                               # should be equal or larger than the tile area
-position_type =         random                 # position to be used
-                                               #    random (randomly place the stars)
-                                               #    true (use positions from the input catalogue)
-mag_min_cut =           10                     # brightest stars to be simulated
+cata_file =  /disks/shear10/ssli/ImSim/input/star_cata/trilegal_9band_10.0_-31.0_10deg2_default.feather
+                                       # leave it as empty if stars are not needed
+cata_area =            10                 # square degrees
+                                       # sky area spanned by the input catalogue
+                                       # should be equal or larger than the tile area
+position_type =         random            #    random (randomly place the stars)
+                                       #    true (use positions from the input catalogue)
+mag_min_cut =           10                # brightest stars to be simulated
 # column names to the desired info
-id_name =               index                  # unique star id
-detection_mag_name =    r                      # correspond to the `detection_band` in [ImSim]
+id_name =               index             # unique star id
+detection_mag_name =      r                 # correspond to the `detection_band` in [ImSim]
 mag_name_list =         r
-                                               # correspond to the the `band_list` in [ImSim]
-RaDec_names =           ra, dec                # not required, if stars are randomly placed
+                                       # correspond to the the `band_list` in [ImSim]
+RaDec_names =           ra, dec           # not required, if stars are randomly placed
 
 
 ################################## NoiseInfo ##############################################
 [NoiseInfo]
 
-cata_file =                                    # input noise background & psf catalogue
+cata_file = ../noise_info/kids_dr4_noise_ugriZYJHKs.csv     # input noise background & psf catalogue
                                                # supported file types: feather, csv, fits
                                                # NOTE: tiles are orderly selected
-noise_psf_basenames =   none, none, none, none, none, none
+noise_psf_basenames =   label, rmsTHELI, InputSeeing, InputBeta, seeing_e, none
                                                # base names for noise and psf info
                                                # order:
                                                #    label, rms, seeing, MoffatBeta, psf_e1, psf_e2
@@ -73,56 +70,37 @@ noise_psf_basenames =   none, none, none, none, none, none
 ################################## ImSim ###################################################
 [ImSim]
 
-survey =              one_tile                 # survey being simulated
-                                               # current supported surveys:
-                                               #    one_tile: simple one image including all the galaxies
-                                               #    simple_Ndeg: N can be any int corresponding to the tile sky area
-                                               #    KiDS: KiDS-like images (5 exposures, dither patterns and chip gaps)
+survey =              simple_1deg              # survey being simulated\n\
+                                               # current supported surveys:\n\
+                                               #    one_tile: simple one image including all the galaxies\n\
+                                               #    simple_Ndeg: N can be any int corresponding to the tile sky area\n\
+                                               #    KiDS: KiDS-like images (5 exposures, dither patterns and chip gaps)\n\
 band_list =             r
-                                               # bands being simulated
+                                               # bands being simulated\n\
 pixel_scale_list =      0.214
-                                               # pixel scale for each band image
+                                               # pixel scale for each band image\n\
 image_type_list =      simple
-                                               # image type for each band
-                                               # current supported types:
-                                               #    simple: without any survey feature (a simple stacked image)
-                                               #    sameExpo: different exposures use the same noise&PSF info
-                                               #    diffExpo: different exposures use different noise&PSF info
+                                               # image type for each band\n\
+                                               # current supported types:\n\
+                                               #    simple: without any survey feature (a simple stacked image)\n\
+                                               #    sameExpo: different exposures use the same noise&PSF info\n\
+                                               #    diffExpo: different exposures use different noise&PSF info\n\
 image_chips =           False
-                                               # save individual chips or not
-                                               # required by lensfit
+                                               # save individual chips or not\n\
+                                               # required by lensfit\n\
 image_PSF =             True
-                                               # save individual psf
-                                               # required by lensfit
-N_tiles =               1                      # number of tiles to be simulated
-                                               # make sure the NoiseInfo cata covers more than this requirement
-                                               # GalInfo can cover less than this requirement,
-                                               #    in which case repeating patterns will be produced
-                                               # NOTE: the total output tiles = N_tiles * N_rotations (specified below)
-gal_rotation_angles =   0                      # degrees (put more values separated with ',' if needed)
-PSF_map =               False                  # output the corresponding PSF map or not
-                                               # can be used by GAaP, but not mandatory if stars are simulated
-rng_seed =              940120                 # base seed for the random number generator
-mag_zero =              30                     # simulated magnitude zero point
-
-
-################################## SWarp ###################################################
-[SWarp]
-
-# for coadding or resampling
-cmd =                   swarp                  # the executable path to the SWarp code
-config_files =          coadd_theli.swarp
-                                               # SWarp configuration files
-                                               # more than one files are supported
-                                               #    in which case, more than one treatments are applied
-bands_group =           [r]                    # bands to be swarped
-                                               # NOTE: the group corresponding to the same config should be surrounded by `[]`
-image_label_list =      THELI                  # name to label the swaped results, one to each group
-only_resamples =        False                  # set it True if only resampling but not coadding
-clean_up_levels =       0                      # clean up level
-                                               #    0: none
-                                               #    1: original images
-                                               # NOTE: careful about cleaning before other swarp applied
+                                               # save individual psf\n\
+                                               # required by lensfit\n\
+N_tiles =               1                      # number of tiles to be simulated\n\
+                                               # make sure the NoiseInfo cata covers more than this requirement\n\
+                                               # GalInfo can cover less than this requirement,\n\
+                                               #    in which case repeating patterns will be produced\n\
+                                               # NOTE: the total output tiles = N_tiles * N_rotations (specified below)\n\
+gal_rotation_angles =   0, 45, 90, 135         # degrees (put more values separated with ',' if needed)
+PSF_map =               False                  # output the corresponding PSF map or not\n\
+                                               # can be used by GAaP, but not mandatory if stars are simulated\n\
+rng_seed =              940120                 # base seed for the random number generator\n\
+mag_zero =              30.                     # simulated magnitude zero point\n\
 
 
 ################################## SExtractor #################################################
@@ -131,7 +109,7 @@ clean_up_levels =       0                      # clean up level
 # for detection
 cmd =                   sex                    # the executable path to the SExtractor code
 detection_band =        r                      # band for detection
-image_label =           THELI                  # label for the image type, can be either:
+image_label =           original                  # label for the image type, can be either:
                                                #    original (for original simulated images)
                                                #    any label specified in `swarp_labels`
 pixel_scale =           0.214                  # pixel scale for the image
@@ -143,7 +121,7 @@ config_file =           kids_sims.sex          # SExtractor configuration file
 param_file =            sex_image.param        # SExtractor parameter file
 filter_file =           default.conv           # SExtractor filter file
 starNNW_file =          default.nnw            # SExtractor Neural-Network_Weight table file
-checkimage_type =       NONE                   # can be one of
+checkimage_type =       SEGMENTATION                   # can be one of
                                                # NONE, BACKGROUND, MINIBACKGROUND, OBJECTS, SEGMENTATION, APERTURES, FILTERED
 clean_up_level =        0                      # clean up level
                                                #    0: none
@@ -163,47 +141,13 @@ dmag_max =              0.5                    # allowed maximum magnitude diffe
 r_max =                 1.0                    # (arcsec) allowed maximum separation
 
 
-################################## MeasureShape #################################################
-[MeasureShape]
-
-method =               lensfit                 # method for galaxy shape measurement
-                                               # supported method:
-                                               #    lensfit
-detection_band =        r                      # band with detection catalogue
-band_list =             r
-                                               # bands being measured
-image_label_list =      original
-                                               # a list of labels for the image types, can be either:
-                                               #    original (for original simulated images)
-                                               #    any label specified in `swarp_labels`
-                                               # NOTE: lensfit uses individual exposures, so it is `original`
-
-
-[lensfit]
-
-lensfit_dir =                                  # directory containing lensfit code
-python2_cmd =           python2                # the executable path to the python2
-postage_size =          48
-start_exposure =        1
-end_exposure =          5
-start_mag =             20.0
-end_mag =               25.0
-PSF_OVERSAMPLING =      1
-PECUT =                 0.02
-PRCUT =                 0.02
-LCUT =                  0.05
-CAMERA =                KIDS
-clean_up_level =        0                      # clean up level
-                                               #    0: none
-                                               #    1: tmp directory
-
 
 ################################## CombineCata ###################################################
 [CombineCata]
 
-file_format =              fits                # output file format
-                                               # supported formats:
-                                               #    fits, feather, csv
-clean_up_level =        0                      # clean up level
-                                               #    0: none
-                                               #    1: all itermediate catalogues (that is ALL, so be very careful!)
+file_format =              fits             # output file format\n\
+                                               # supported formats:\n\
+                                               #    fits, feather, csv\n\
+clean_up_level =        0                      # clean up level\n\
+                                               #    0: none\n\
+                                               #    1: all itermediate catalogues (that is ALL, so be very careful!)\n\
