update example scripts

--- a/scripts/example_single_band_grid.ini
+++ b/scripts/example_single_band_grid.ini
@@ -17,11 +17,11 @@ out_dir =   /disks/shear15/ssli/ImSim/output # main directory for all the output
 
 cata_file =        /disks/shear10/ssli/ImSim/input/COSMOS_cata/cosmos_shape_z_ugriZYJHKs_selected.feather # input galaxy mock catalogue
                                                # supported file types: feather, csv, fits
-position_type =         true                   # position to be used
+position_type =         grid                   # position to be used
                                                #    true (use positions from the input catalogue)
                                                #    grid (put in a grid)
 mag_min_cut =           16                     # brightest galaxies to be simulated
-Re_max_cut =            99                      # largest galaxies to be simulated in arcsec (default: 99.)
+Re_max_cut =            6                      # largest galaxies to be simulated in arcsec (default: 99.)
 # catalogue column names to the desired info
 id_name =               OBJNO                  # unique galaxy id
 detection_mag_name =    r_mag_auto                      # correspond to the `detection_band` in [ImSim]
@@ -38,7 +38,7 @@ shape_names =           shape/Re, shape/sersic_n, BA_GALFIT_HI, none, none, none
 ################################## StarInfo ##############################################
 [StarInfo]
 
-cata_file =  /disks/shear10/ssli/ImSim/input/star_cata/trilegal_9band_10.0_-31.0_10deg2_default.feather
+cata_file =
                                        # leave it as empty if stars are not needed
 cata_area =            10                 # square degrees
                                        # sky area spanned by the input catalogue
@@ -57,10 +57,10 @@ RaDec_names =           ra, dec           # not required, if stars are randomly 
 ################################## NoiseInfo ##############################################
 [NoiseInfo]
 
-cata_file = ../noise_info/kids_dr4_noise_ugriZYJHKs.csv     # input noise background & psf catalogue
+cata_file = ../noise_info/kids_dr4_noise_median.csv     # input noise background & psf catalogue
                                                # supported file types: feather, csv, fits
                                                # NOTE: tiles are orderly selected
-noise_psf_basenames =   label, rmsTHELI, InputSeeing, InputBeta, seeing_e, none
+noise_psf_basenames =   label, rmsTHELI, InputSeeing, InputBeta, none, none
                                                # base names for noise and psf info
                                                # order:
                                                #    label, rms, seeing, MoffatBeta, psf_e1, psf_e2
@@ -114,7 +114,7 @@ image_label =           original                  # label for the image type, ca
                                                #    original (for original simulated images)
                                                #    any label specified in `swarp_labels`
 pixel_scale =           0.214                  # pixel scale for the image
-mask_stars =            True                   # mask stars using input info
+mask_stars =            False                   # mask stars using input info
 cross_match =           True                   # cross-match with the input catalogue
                                                #    in which case, catalogues with match info will be saved
                                                #    see next section for configuration
@@ -140,6 +140,7 @@ save_false =            True                   # save false-detected object info
 save_missed =           True                   # save the missed object info
 mag_closest =           True                   # use magnitude to select for duplicated match
 r_max =                 0.6                    # (arcsec) allowed maximum separation
+
 
 
 ################################## CombineCata ###################################################
