example for skills r-band

--- a/scripts/example_skills_bandr.ini
+++ b/scripts/example_skills_bandr.ini
@@ -9,13 +9,13 @@
 [Paths]
 
 config_dir =  ../config/                       # directory to all the configuration files
-out_dir =   /disks/shear16/ssli/ImSim/output/skills_v03s_example/
+out_dir =   /disks/shear15/ssli/ImSim/output/skills_v064_example/
 
 
 ################################## GalInfo ##############################################
 [GalInfo]
 
-cata_file =        /disks/shear10/ssli/ImSim/input/SURFS_cata/skills_v03s_input_part0.feather
+cata_file =        /disks/shear10/ssli/ImSim/input/SURFS_cata/skills_v06s_input_part0.feather
                                                # supported file types: feather, csv, fits
 position_type =         true                   # position to be used
                                                #    true (use positions from the input catalogue)
@@ -69,7 +69,7 @@ RaDec_names =           ra, dec                # not required, if stars are rand
 cata_file = ../noise_info/skills_v034/noise_selec_135_0_N18_part0.csv     # input noise background & psf catalogue
                                                # supported file types: feather, csv, fits
                                                # NOTE: tiles are orderly selected
-file4varChips =                
+file4varChips = ../noise_info/kids_dr4_psf_moffat_fromcoeffs.csv                                
                                                # a separate psf info catalogue for varChips mode (see ImSim)
                                                # not required for other modes
 noise_psf_basenames =   label, rmsExpo, InputSeeing, InputBeta, seeing_e1, seeing_e2, chip_id, expo_id
@@ -92,13 +92,13 @@ band_list =             r
                                                # bands being simulated
 pixel_scale_list =      0.214
                                                # pixel scale for each band image
-image_type_list =      sameExpo
+image_type_list =      varChips
                                                # image type for each band
                                                # current supported types:
                                                #    simple: without any survey feature (a simple stacked image)
                                                #    sameExpo: different exposures use the same noise&PSF info
                                                #    diffExpo: different exposures use different noise&PSF info
-image_chips =           False
+image_chips =           True
                                                # save individual chips or not
                                                # required by lensfit
 image_PSF =             True
@@ -154,7 +154,7 @@ config_file =           kids_sims.sex          # SExtractor configuration file
 param_file =            sex_image.param        # SExtractor parameter file
 filter_file =           default.conv           # SExtractor filter file
 starNNW_file =          default.nnw            # SExtractor Neural-Network_Weight table file
-checkimage_type =       NONE                   # can be one of 
+checkimage_type =       SEGMENTATION                   # can be one of 
                                                # NONE, BACKGROUND, MINIBACKGROUND, OBJECTS, SEGMENTATION, APERTURES, FILTERED
 clean_up_level =        0                      # clean up level
                                                #    0: none
