wrong stellar catalogues in part1

--- a/scripts/skills_v07D7/config_part1.ini
+++ b/scripts/skills_v07D7/config_part1.ini
@@ -50,7 +50,7 @@ z_name =                zobs                   # column name for redshift
 ################################## StarInfo ##############################################
 [StarInfo]
 
-cata_file =             /disks/shear10/ssli/ImSim/input/star_cata/trilegal_9band_135.0_0.0_10deg2_default.feather
+cata_file =             /disks/shear16/ssli/ImSim/input/star_cata/trilegal_9band_180.0_0.0_10deg2_default.feather
                                                # input star mock catalogue
                                                # supported file types: feather, csv, fits
                                                # leave it as empty if stars are not needed
@@ -193,7 +193,7 @@ config_file =           kids_sims.sex          # SExtractor configuration file
 param_file =            sex_image.param        # SExtractor parameter file
 filter_file =           default.conv           # SExtractor filter file
 starNNW_file =          default.nnw            # SExtractor Neural-Network_Weight table file
-checkimage_type =       NONE                   # can be one of 
+checkimage_type =       SEGMENTATION                   # can be one of 
                                                # NONE, BACKGROUND, MINIBACKGROUND, OBJECTS, SEGMENTATION, APERTURES, FILTERED
 clean_up_level =        0                      # clean up level
                                                #    0: none
@@ -247,7 +247,7 @@ method =                BPZ                    # method for photo-z measurement\
                                                # supported method:\n\
                                                #    BPZ\n\
 [BPZ]
-BPZ_dir =                /disks/shear16/ssli/ImSim/code/bpz-1.99.3_expanded
+BPZ_dir =                /disks/shear10/ssli/ImSim/code/bpz-1.99.3_expanded
                                                # the directory containing BPZ-related codes
 python2_cmd =            /disks/shear15/ssli/miniconda3/envs/BPZenv/bin/python
                                                # the executable path to the python2
