--- a/scripts/skills_v07D7/config_part1_r.ini
+++ b/scripts/skills_v07D7/config_part1_r.ini
@@ -14,6 +14,7 @@ out_dir =               /disks/shear16/ssli/ImSim/output/skills_v07D7/part1/
                                                # main directory for all the outputs
 tmp_dir =               /data2/ssli/ImSim/output/tmp/skills_v07D7/part1/
                                                # tmp directory for tmp outputs
+cata_folder_names =     input_rOnly, SExtractor, CrossMatch, photometry, photo_z, shapes, combined
 
 
 ################################## GalInfo ##############################################
