--- a/sensitivity_test/galaxy/B_config_nD.ini
+++ b/sensitivity_test/galaxy/B_config_nD.ini
@@ -10,16 +10,16 @@
 
 config_dir =            ../../config/
                                                # directory to all the configuration files
-out_dir =               /disks/shear16/ssli/ImSim/output/skills_v07D7_qU15/part0/
+out_dir =               /disks/shear16/ssli/ImSim/output/skills_v07D7_nD/part0/
                                                # main directory for all the outputs
-tmp_dir =               /data2/ssli/ImSim/output/tmp/skills_v07D7_qU15/part0/
+tmp_dir =               /data2/ssli/ImSim/output/tmp/skills_v07D7_nD/part0/
                                                # tmp directory for tmp outputs
 
 
 ################################## GalInfo ##############################################
 [GalInfo]
 
-cata_file =             /disks/shear10/ssli/ImSim/input/SURFS_cata/skills_v07Ds_input_part0_qU15.feather
+cata_file =             /disks/shear10/ssli/ImSim/input/SURFS_cata/skills_v07Ds_input_part0_shifted.feather
                                                # input galaxy mock catalogue
                                                # supported file types: feather, csv, fits
 position_type =         true                   # position to be used
@@ -34,10 +34,10 @@ Re_cut =                0, 99                  # size cut for galaxies to be sim
 # catalogue column names to the desired info
 id_name =               index                  # unique galaxy id
 detection_mag_name =    r_SDSS_apparent_corr   # correspond to the `detection_band` in [ImSim] 
-mag_name_list =         r_SDSS_apparent_corr
+mag_name_list =         r_SDSS_apparent_corr, u_SDSS_apparent_corr, g_SDSS_apparent_corr, i_SDSS_apparent_corr, z_SDSS_apparent_corr, Y_VISTA_apparent_corr, J_VISTA_apparent_corr, H_VISTA_apparent_corr, K_VISTA_apparent_corr
                                                # correspond to the the `band_list` in [ImSim]
 RaDec_names =           ra, dec 
-shape_names =           Re_arcsec, shape/sersic_n, BA, PA_random, none, none, none, none, none, none
+shape_names =           Re_arcsec, shape/sersic_n_D, BA, PA_random, none, none, none, none, none, none
                                                # order: 
                                                #    Re (in arcsec!), sersic_n, axis_ratio, PA, 
                                                #    bulge_fraction, bulge_Re (in arcsec!), bulge_axis_ratio, bulge_sersic_n, 
@@ -64,7 +64,7 @@ mag_cut =               14, 27                 # magnitude cut for stars to be s
 # column names to the desired info
 id_name =               index                  # unique star id
 detection_mag_name =    r                      # correspond to the `detection_band` in [ImSim] 
-mag_name_list =         r 
+mag_name_list =         r, u, g, i, Z, Y, J, H, Ks 
                                                # correspond to the the `band_list` in [ImSim]
 RaDec_names =           ra, dec                # not required, if stars are randomly placed
 
@@ -85,7 +85,7 @@ label_basename =        label                  # column name for label
 noise_basenames =       rmsExpo                # base names for noise background
                                                # order: rms
                                                # the real column name is associated with band labels as `rms_r` etc
-psf_basenames_moffat =  
+psf_basenames_moffat =  InputSeeing, InputBeta, seeing_e1, seeing_e2
                                                # base names for psf profile
                                                # used by psf_type == Moffat
                                                # order:
@@ -102,11 +102,10 @@ psf_basenames_airy =
 id_basenames =                                 # column names for IDs used by file4varChips
                                                # not used otherwise
                                                # order: chip_id, expo_id
-psf_type_list =         PixelIma
+psf_type_list =         PixelIma, Moffat, Moffat, Moffat, Moffat, Moffat, Moffat, Moffat, Moffat
                                                # PSF profile list, same order as band_list
                                                # supported types:
                                                #    Moffat, Airy, PixelIma
-
 
 ################################## ImSim ###################################################
 [ImSim]
@@ -116,21 +115,21 @@ survey =                KiDS                   # survey being simulated
                                                #    one_tile: simple one image including all the galaxies
                                                #    simple_Nsqdeg: N can be any float corresponding to the tile sky area
                                                #    KiDS: KiDS-like images (5 exposures, 32 chips, dither patterns and chip gaps)
-band_list =             r
+band_list =             r, u, g, i, Z, Y, J, H, Ks
                                                # bands being simulated
-pixel_scale_list =      0.214
+pixel_scale_list =      0.214, 0.214, 0.214, 0.214, 0.34, 0.34, 0.34, 0.34, 0.34
                                                # pixel scale for each band image
-image_type_list =       varChips
+image_type_list =       varChips, sameExpo, sameExpo, sameExpo, simple, simple, simple, simple, simple
                                                # image type for each band
                                                # current supported types:
                                                #    simple: without any survey feature (a simple stacked image)
                                                #    sameExpo: different exposures use the same noise&PSF info
                                                #    diffExpo: different exposures use different noise&PSF info
                                                #    varChips: different chips use different PSF (on the top of diffExpo)
-image_chips =           True
+image_chips =           True, False, False, False, False, False, False, False, False
                                                # save individual chips or not
                                                # required by lensfit
-image_PSF =             True
+image_PSF =             True, False, False, False, False, False, False, False, False
                                                # save individual psf
                                                # required by lensfit
 image_PSF_size =        48                     # (pixels) the size of the saved PSF image
@@ -145,7 +144,7 @@ casual_band =           r                      # band used by casual_mag
 casual_Nbins =          20                     # how many quantile bins used by casual simulation
 casual_FracSeedGal =    0.01                   # Fraction of seed galaxies
                                                # seed galaxies: those simulated carefully
-N_tiles =               10                      # number of tiles to be simulated
+N_tiles =               18                      # number of tiles to be simulated
                                                # make sure the NoiseInfo cata covers more than this requirement
                                                # GalInfo can cover less than this requirement,
                                                #    in which case repeating patterns will be produced
@@ -162,15 +161,15 @@ mag_zero =              30                     # simulated magnitude zero point
 
 # for coadding or resampling
 cmd =                   swarp                  # the executable path to the SWarp code
-config_files =          coadd_theli.swarp
+config_files =          coadd_theli.swarp, coadd_aw.swarp
                                                # SWarp configuration files
                                                # more than one files are supported
                                                #    in which case, more than one treatments are applied
-bands_group =           [r]                    # bands to be swarped
+bands_group =           [r], [u, g, r, i]      # bands to be swarped
                                                # NOTE: the group corresponding to the same config should be surrounded by `[]`
-image_label_list =      THELI                  # name to label the swaped results, one to each group
-only_resamples =        False                  # set it True if only resampling but not coadding
-clean_up_levels =       0                      # clean up level
+image_label_list =      THELI, AW              # name to label the swaped results, one to each group
+only_resamples =        False, False           # set it True if only resampling but not coadding
+clean_up_levels =       0, 0                   # clean up level
                                                #    0: none
                                                #    1: original images
                                                # NOTE: careful about cleaning before other swarp applied
@@ -212,6 +211,66 @@ save_missed =           False                  # save the missed object info
 mag_closest =           True                   # use magnitude to select for duplicated match
 r_max =                 0.6                    # (arcsec) allowed maximum separation
 
+################################## MeasurePhotometry ########################################################\n\
+[MeasurePhotometry]
+method =                GAaP                   # method for photometry measurement
+                                               # supported method:
+                                               #    GAaP
+detection_band =        r                      # band with detection catalogue
+band_list =             r, u, g, i, Z, Y, J, H, Ks
+                                               # bands being measured
+band_spatial_variation = True, False, False, False, False, False, False, False, False
+                                               # does psf vary spatially
+image_label_list =      AW, AW, AW, AW, original, original, original, original, original
+                                               # a list of labels for the image types, can be either:
+                                               #    original (for original simulated images)
+                                               #    any label specified in `swarp_labels`
+
+[GAaP]
+gaap_dir =              /disks/shear10/ssli/ImSim/code/GAaP_src_20201221
+min_aper_list =         0.7, 1.0               # minimum aperture size\n\
+                                               # a list of sizes can be provided\n\
+                                               # the final decision follows KiDS\n\
+max_aper =              2.0                    # maximum aperture size\n\
+use_PSF_map =           False                  # use separate psf map for psf estimation\n\
+                                               # only required if stars are not simulated\n\
+star_SNR_cut =          100, 2000              # SNR range for stars used for PSF estimation\n\
+                                               # not used if PSF map is provided\n\
+clean_up_level =        0                      # clean up level\n\
+                                               #    0: none\n\
+                                               #    1: tmp directory\n\
+
+################################## MeasurePhotoz ########################################################\n\
+[MeasurePhotoz]
+method =                BPZ                    # method for photo-z measurement\n\
+                                               # supported method:\n\
+                                               #    BPZ\n\
+[BPZ]
+BPZ_dir =                /disks/shear10/ssli/ImSim/code/bpz-1.99.3_expanded
+                                               # the directory containing BPZ-related codes
+python2_cmd =            /disks/shear15/ssli/miniconda3/envs/BPZenv/bin/python
+                                               # the executable path to the python2
+                                               #    with necessary package for BPZ
+detection_band =         r                      # band with detection catalogue\n\
+band_list =              u, g, r, i, Z, Y, J, H, Ks
+band_FilterName_list =   shark_u_SDSS, shark_g_SDSS, shark_r_SDSS, shark_i_SDSS, shark_z_SDSS, shark_Y_VISTA, shark_J_VISTA, shark_H_VISTA, shark_K_VISTA
+band_CataNameBase =      MAG_GAAP
+banderr_CataNameBase =   MAGERR_GAAP
+bandflag_CataNameBase =  FLAG_GAAP
+bandlim_CataNameBase =   MAG_LIM
+photo_sys =              AB
+prior_band =             i
+prior_name =             NGVS
+templates_name =         CWWSB_capak
+interpolation =          10
+lkl_zmin =               0.01
+lkl_zmax =               2.5
+lkl_dz =                 0.01
+lkl_odds =               0.68
+lkl_min_rms =            0.067
+clean_up_level =         0                     # clean up level\n\
+                                               #    0: none\n\
+                                               #    1: tmp directory\n\
 
 ################################## PSFmodelling #################################################
 [PSFmodelling]
